DEP: update pom